css/main.css
*,*::after, *::before {
    box-sizing: border-box;
}

div > * {
    transition: all 0.2s linear;
}

/* body{
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
} */

.main {
    display: flex;
    margin-top: 1rem;
    padding: 2rem 5rem;
    flex-wrap: wrap;
}

/* section {
    margin: 2rem 1rem;
} */

.top-container {
    height: 93vh;
    padding: 3.43rem;
    line-height: 1.5rem;
    text-align: center;
    color: #fff;
    background-color: #000;
    background-image: url("../img/infinity.jpg");
    background-size: cover;
    background-position: center;
}

.top-container-gif {
    height: 93vh;
    padding: 3.43rem;
    line-height: 1.5rem;
    text-align: center;
    color: #fff;
    background-color: #000;
    background-size: cover;
    background-position: center;
    background-image: url("../img/infinity.gif");
}

.p-about {
    max-width: 42rem;
    text-align: left;
}

.p-caption {
    text-align: center;
}

.link-item {
    display: inline-block;
}

.header {
  padding: 0.625rem;
  text-align: center;
}

.content {
  padding: 1rem 4rem;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.sticky + .content {
  padding-top: 6.375rem;
}

.top-logo {
    position: absolute;
    left: 24%;
    top: 32%;
    background-color: rgba(0,0,0,0.7);
    padding: 0 1rem 0.5rem 1rem;
    /* margin: 4rem auto;
    max-width: 38rem; */
}

.top-logo a{
    text-decoration: none;
    color: inherit;
}

.top-logo img{
    width: 3rem;
    margin: 0.8rem;
    display: inline-block;
    vertical-align: middle;
}

.top-logo h1{
    display: inline-block;
    vertical-align: middle;
}

.top-logo a.intext-link{
    color: inherit;
    text-decoration: underline;
}

a#sticky-logo {
    display: none;
    float: left;
    margin: 0 0.6rem;
}

a#sticky-logo img {
    width: 1.5rem;
}

.placeholder {
    height: 25rem;
    width: 100%;
    border: #ccc solid 1px;
}

/* Headings */
/* h1 {
    font-family: 'Hammersmith One', sans-serif;
    font-size: 2.3em;
    font-weight: 700;
} */

h2 {
    font-size: 2em;
    font-weight: 500;
    color: #57606f;
}

h3 {
    font-size: 1.5em;
    font-weight: 400;
}

h4 {
    font-size: 1.2em;
    font-weight: 400;
    color: #57606f;
}

p {
    font-size: 1.1em;
    font-weight: 300;
    max-width: 46em;
    line-height: 1.5em;
}

#work h2, #contact h2, h2#illustration, h2#logo, h2#photography{
    border-left: 8px solid #63cdda;
    padding-left: 1rem; 
}

.color-text {
    color: #63cdda;
}

.emphasize-text {
    font-size: 1.4rem;
    font-weight: 400;
    margin-right: 0.2rem;
}


/* navigation bar */
/* a.nav-button {
    text-decoration: none;
    font-size: 1.1rem;
    font-weight: 400;
    color: #000000;
    border-bottom: #000 1px solid;
    margin: 0.8rem 1rem;
    padding: 0.2rem 0.5rem;
}

a.nav-button:hover {
    border-bottom: transparent 1px solid;
    transition: color 0.3s;
}

a.nav-button:focus {
    color: #63cdda;
    border-bottom: transparent 1px solid;
    transition: color 0.3s;
} */

a.nav-button img {
    width: 4rem;
}

/* grid */
.grid-box {
    /* margin: 0 1em 1em 1em; */
    padding: 0;
    width: 100%;
    height: auto;
    display: flex;
    flex-flow: row wrap;
    -webkit-flex-flow: row wrap;
    justify-content: space-around;
    align-items: center;
}

.sub-grid-box {
    padding: 0;
    margin: 0 0.5em;
    width: 45%;
    height: auto;
}

/* flexbox */
.container {
    display: flex; 
    flex-wrap: wrap;
}

.flex-project {
    padding: 0.5rem 1rem;
    flex: 1 1 18rem;
    justify-content: space-around;
}

.project-link {
    cursor: pointer;
    transition: all 0.3s ease;
    /* border: #fff 3px solid; */
}

.project-link a:hover, .project-link a:focus {
    /* border: #63cdda 3px solid; */
    box-shadow: 0px 0px 16px #63cdda;
}

.project-link a{
    text-decoration: none;
    color: inherit;
}

/* button */
a.link-button {
    display: block;
    padding: 0.6rem 2.4rem;
    font-size: 1rem;
    font-weight: 400;
    color: #57606f;
    background-color: white;
    text-decoration: none;
    width: 12rem;
    text-align: center;
    letter-spacing: 0.06rem;
    border: 2px solid #57606f;
}
    
a.link-button:hover, a.link-button:focus {
    color: white;
    background-color: #57606f;
    transition: background-color 0.3s;
}
    
a.link-button-dark {
    display: block;
    padding: 0.6rem 2.4rem;
    margin: 1rem 0;
    font-size: 1rem;
    font-weight: 400;
    background-color: #57606f;
    text-decoration: none;
    width: 12rem;
    text-align: center;
    letter-spacing: 0.06rem;
    border: 2px solid #57606f;
    color: white;
}
    
a.link-button-dark:hover, a.link-button-dark:focus {
    color: #57606f;
    background-color: white;
    border: 2px solid #57606f;
    transition: background-color 0.3s;
}

/* .float-right {
    float: right;
} */

a.intext-link {
    color: #000;
}

a.intext-link:hover, a.intext-link:focus {
    color: #57606f;
}

div.img-cover img {
    box-shadow: 0px 0px 10px #f1f2f6;
    width: 100%;
    background-color: #ccc;
    height: 15rem;
    cursor: pointer;
    object-fit: cover;
    transition: all .3s ease-in-out;
}

/* a.img-cover:hover img, a.img-cover:focus img {
    transform: scale(1.1);
} */

.title {
    width: 100%;
    /* margin-bottom: 0rem; */
}

.subtitle {
    font-size: 1.1em;
    font-weight: 400;
    color: #57606f;
    width: 100%;
    line-height: 1.5em;
}

footer {
    margin-top: 2rem;
    padding: 3rem;
    text-align: center;
    background-color: #000;
    color: #fff;
}

footer .intext-link{
    color: #fff;
}

/* style for project page */
a#nav-logo img {
    width: 3.5rem;
    cursor: pointer;
}

.img-caption {
    text-align: center;
    color: #57606f;
    font-size: 0.9rem;
}

.project-container {
    position: relative;
    height: auto;
    width: 60%;
    margin: auto;
    margin-top: 80px;
    margin-bottom: 80px;
}

.project-img {
    width: 100%;
}

.project-gif {
    width: 85.7%;
}

.project-phone {
    width: 12rem;
}

.project-screenshot {
    width: 7.6rem;
}

.project-screenshot.over-img{
    position: absolute;
    top: 13.8%;
    left: 25.2%;
}

/* allow for lazyloaded images to be blurred until loaded*/
.blur {
	-webkit-filter: blur(5px);
	filter: blur(5px);
	transition: filter 400ms;
}

/* Once our image has loaded - and lazysizes.js has applied the .lazyloaded class - we can be more specific with our CSS selectors to allow for the blur to be removed from our image.*/
.blur.lazyloaded {
	-webkit-filter: blur(0);
	filter: blur(0);
}

.scalable {
    transition: all .2s ease-in-out;
}

.scalable:hover, .scalable:focus{
    /* transform: scale(2);
    z-index: 1; */
}

.parent{
    position: relative;
}

.over-img{
    position: absolute;
    top: 11.8%;
    left: 7.8%;
}

.project-table {
    overflow-x: auto;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
}

tr:nth-child(even){
    background-color: #f1f2f6;
}

th {
    text-align: center;
}

td {
    padding: 3px 5px;
    text-align: center;
    border-left: 1px solid #ccc;
    vertical-align: top;
}

.scroll-group-title {
    display: block;
    color: #57606f;
    text-align: left;
}

.scroll-group {
    overflow: auto;
    white-space: nowrap;
}

.step {
    display: inline-block;
    margin: 0 -0.3rem 0 0;
}

.step-content {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    flex-basis: 5rem;
}

.step-text {
    width: 12rem;
    height: 5.2rem;
    white-space: normal;
    text-align: center;
    padding: 0.2rem 0.3rem;
    background-color: #f1f2f6;
    border-left: 1px solid #ccc;
    margin: 0;
}


/* breakpoints */
@media (max-width:900px) {
    h1 {
      font-size: 2em;
    }
  
    h2 {
        font-size: 1.8em;
    }
    
    h3 {
        font-size: 1.3em;
    }

    h4 {
        font-size: 1.1em;
    }

    p {
        font-size: 1rem;
        line-height: 1.4rem;
    }

    .main{
        margin: 0;
        padding: 2rem 2rem;
    }

    .sub-grid-box {
        width: auto;
    }

    .project-container{
        width: 80%;
    }

    .top-logo {
        left: 11%;
        top: 30%;
        width: 70%;
    }
}

@media (max-width:650px){
    ul {
        top: 0;
        left: 0;
        position: relative;
    }

    a.nav-button {
        font-size: 1rem;
        /* margin: 0.7rem 1rem;
        padding: 0.1rem 1rem; */
    }

    .main {
      margin: 0;
      padding: 1rem 1rem;
    }

    .sub-grid-box {
        margin: 0.5rem;
    }

    .project-container{
        width: 86%;
    }

    section {
        margin: 1rem 0.5rem;
    }

    .link-item {
        width: 80%;
        padding-left: 1.5rem;
    }

    .top-logo {
        left: 12%;
        top: 18%;
        width: 74%;
    }

    .title {
        margin-top: 1.5rem;
    }

    .subtitle {
        margin-top: 0.6rem;
    }
}

@media (max-width:495px) {
    a.link-button {
        width: 100%;
    }

    a.link-button-dark {
        width: 100%;
    }

    a.nav-button {
        font-size: 0.9rem;
        margin: 0.7rem 0.25rem;
    }
}

@media (max-width:320px) {
    .top-logo {
        padding: 0.1rem;
        top: 6%;
    }
}

/*style for gallery page*/
.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}

/* Create four equal columns that sits next to each other */
.column {
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
}

.column img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

/* Responsive layout - makes a two column-layout instead of four columns */
@media (max-width: 800px) {
    .column {
        flex: 50%;
        max-width: 50%;
    }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media (max-width: 600px) {
    .column {
        flex: 100%;
        max-width: 100%;
    }
}

iframe {
    width:100%;
    border:0;
    overflow:hidden;
}

